--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html>
+<head style="width: 100%; height: 100%">
+    <meta charset="utf-8">
+    <title>HippoCamera Project</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.9/semantic.css" />
+    <link rel="stylesheet"
+          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
+
+    <link href="content/css/main.less" rel="stylesheet/less" type="text/css"/>
 </head>
-<body>
-    <h1>Hello World!</h1>
+
+<body style="width: 100%">
+<div id="app" style="width: 100%"></div>
+
+<script src="bundle.js"></script>
 </body>
 </html>
-
