--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <html>
 <head style="width: 100%; height: 100%">
     <meta charset="utf-8">
-    <title>HippoCamera Project</title>
+    <title>RU Hacks</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
