--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
     <link href="content/css/main.less" rel="stylesheet/less" type="text/css"/>
 </head>
 
-<body style="width: 100%; height: 100%;">
+<body style="width: 100%; height: 100%; background-color: #FAEBD7">
 <div id="app" style="width: 100%"></div>
 
 <script src="bundle.js"></script>
